[gd_scene load_steps=11 format=2]

[ext_resource path="res://entity/player/png/player_1.png" type="Texture" id=1]
[ext_resource path="res://entity/player/Player.gd" type="Script" id=2]
[ext_resource path="res://entity/player/png/player_2.png" type="Texture" id=3]
[ext_resource path="res://entity/ball/normal/Ball_Normal.tscn" type="PackedScene" id=4]
[ext_resource path="res://entity/player/wav/ZSG - Footstep.wav" type="AudioStream" id=5]
[ext_resource path="res://entity/player/wav/ZSG - Game Over.wav" type="AudioStream" id=6]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ), ExtResource( 3 ) ],
"loop": true,
"name": "default",
"speed": 3.0
} ]

[sub_resource type="CircleShape2D" id=2]
radius = 28.0

[sub_resource type="CircleShape2D" id=3]
radius = 32.0

[sub_resource type="Animation" id=4]
length = 2.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.6, 0.9, 1.2, 1.5, 1.8, 2.1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 180.0, 90.0, 270.0, 0.0, 180.0, 90.0, 270.0, 0.0 ]
}

[node name="Player" type="KinematicBody2D" groups=[
"Player",
]]
collision_layer = 2
collision_mask = 3
script = ExtResource( 2 )
normal_ball = ExtResource( 4 )
walking = ExtResource( 5 )
game_over = ExtResource( 6 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="HeldBall" type="Sprite" parent="."]

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 20

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 3 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/KO = SubResource( 4 )

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )
volume_db = -10.0

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
